[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tree-hydraulics"
version = "0.1.1"
description = "Exact O(N) hydraulic flow computation on rooted tree pipe networks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
validate = ["scipy>=1.9"]

[project.urls]
Homepage = "https://github.com/resonant4/tree-hydraulics"
Source = "https://github.com/resonant4/tree-hydraulics"
